feat(sync): add sessionUuid to pull change DTO
SyncChangeDto carries the client-generated session UUID so the plugin can
match local rows (local key is sessionUuid, not the server primary key).
SyncPullService.toChangeDto passes session.getSessionUuid() on the normal
branch and null when the session was physically removed (op=DELETE).